# maskterial_trainer

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
maskterial_trainer/: app.py  config.py
maskterial_trainer/pipeline/: annotation_io.py  coco_export.py  contrasts.py  evaluation.py  export_bundle.py  flatfield.py  model_download.py  project.py  semantic_io.py  training.py  training_zip.py
maskterial_trainer/resources/configs/GMM/: default_config.json
maskterial_trainer/resources/configs/M2F/: base_config.yaml
maskterial_trainer/runners/: _progress.py  evaluate_classifier.py  run_inference.py  train_amm.py  train_gmm.py  train_segmentation.py
maskterial_trainer/ui/: annotation_canvas.py  annotation_view.py  convert_view.py  evaluation_view.py  export_view.py  images_view.py  main_window.py  semantic_view.py  training_view.py  welcome_view.py
