[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maskterial-trainer"
version = "0.0.1"
description = "Desktop GUI for training MaskTerial models on new 2D materials."
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "numpy",
    "Pillow",
    "opencv-python",
    "matplotlib>=3.5",
    "pycocotools>=2.0",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/joachimsgit/maskterial_trainer"
Repository = "https://github.com/joachimsgit/maskterial_trainer"
Issues = "https://github.com/joachimsgit/maskterial_trainer/issues"

[project.scripts]
maskterial-trainer = "maskterial_trainer.app:main"

[tool.setuptools.packages.find]
include = ["maskterial_trainer*"]

[tool.setuptools.package-data]
"maskterial_trainer.resources" = ["configs/**/*.json", "configs/**/*.yaml"]
